# skinscan

./: .gitignore  README.md  capacitor.config.json  ionic.config.json  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  pubspec.yaml  requirements.txt  tailwind.config.js
.dart_tool/: package_config.json  package_config_subset  version
android/: capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle
api/: pyproject.toml
api/model/: train_model.py
api/src/: main.py
components/: Index.jsx  Index.tsx  how.tsx
components/FirstTime/: FirstTime.tsx
components/Home/: Home.tsx
components/How/: How.tsx
components/Loop/: Loop.tsx  Question.tsx
components/global/: NotchLogo.tsx  SkButton.tsx  SkErr.tsx
hooks/: useCamera.ts  useSkAPI.ts
ios/App/: Podfile
ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: auth.ts  main.dart  overrides.ts  questions.ts
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
pages/: _app.tsx  example.tsx  how.tsx  index.tsx  loop.tsx  onboarding.tsx  question.tsx
pages/accounts/: create.tsx  login.tsx
pages/examples/: eczema.tsx  gangrene.tsx
skinscan-api/: README.md  detect.py  generate_training_data.py  schema.sql
skinscan-api/api/: main.py
skinscan-api/input/: README.md
skinscan-api/misc/: imageprep.py
store/: store.ts
styles/: global.css  tailwind.css
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+99 files in other folders)
