[tool.poetry]
name = "skinscan-api"
version = "0.1.0"
description = ""
authors = ["baris-inandi <68742481+baris-inandi@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
tensorflow = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
